--- a/index.html
+++ b/index.html
@@ -12,57 +12,147 @@
 
 <body>
 	<div class="wrapper">
-		<header class="main-header">
-			<div class="container main-header__container">
-				<section class="main-header__logo">
-					<a href="#" class="main-header__logo-link">
-						<svg class="main-header__logo-svg">
-							<use xlink:href="img/svg/sprite.svg#logo"></use>
+		<div class="wrapper-for-h">
+			<header class="main-header">
+				<div class="container main-header__container">
+					<section class="main-header__logo">
+						<a href="#" class="main-header__logo-link">
+							<svg class="main-header__logo-svg">
+								<use xlink:href="img/svg/sprite.svg#logo"></use>
+							</svg>
+						</a>
+					</section>
+					<div class="main-header__contacts-and-menu">
+						<section class="main-header__contacts contacts">
+							<div class="contacts__languages">
+								<a href="#" class="contacts__language">ук</a>
+								<a href="#" class="contacts__language">ру</a>
+								<a href="#" class="contacts__language contacts__language--active">en</a>
+							</div>
+							<span class="contacts__address">
+								Kyiv, Mechnikova str, 14/1
+							</span>
+							<span class="contacts__phone">
+								0800 211 927
+							</span>
+							<div class="contacts__socials">
+								<a class="contacts__link">
+									<svg class="contacts__facebook">
+										<use xlink:href="img/svg/sprite.svg#facebook-small"></use>
+									</svg>
+								</a>
+							</div>
+						</section>
+						<section class="main-header__menu main-navigation">
+							<nav class="main-navigation__nav">
+								<ul class="main-navigation__list">
+									<li class="main-navigation__item">
+										<a href="#" class="main-navigation__link">about us</a>
+									</li>
+									<li class="main-navigation__item">
+										<a href="#" class="main-navigation__link">services</a>
+									</li>
+									<li class="main-navigation__item">
+										<a href="#" class="main-navigation__link">team</a>
+									</li>
+									<li class="main-navigation__item">
+										<a href="#" class="main-navigation__link">publications</a>
+									</li>
+									<li class="main-navigation__item">
+										<a href="#" class="main-navigation__link">contact</a>
+									</li>
+								</ul>
+							</nav>
+						</section>
+					</div>
+				</div>
+			</header>
+			<div class="screen">
+				<div class="container screen__container">
+					<h1 class="screen__title">you legal solutions provider</h1>
+					<div class="screen__arrow">
+						<svg class="screen__arrow-icon">
+							<use xlink:href="img/svg/sprite.svg#arrow-in-circle"></use>
 						</svg>
-					</a>
-				</section>
-				<div class="main-header__contacts-and-menu">
-					<section class="main-header__contacts contacts">
-						<div class="contacts__languages">
-							<a href="#" class="contacts__language">ук</a>
-							<a href="#" class="contacts__language">ру</a>
-							<a href="#" class="contacts__language">en</a>
-						</div>
-						<span class="contacts__address">
-							Kyiv, Mechnikova str, 14/1
-						</span>
-						<span class="contacts__phone">
-							0800 211 927
-						</span>
-						<div class="contacts__socials">
-							<a class="contacts__link">
-								<svg class="contacts__facebook">
-									<use xlink:href="img/svg/sprite.svg#facebook-small"></use>
-								</svg>
-							</a>
-						</div>
-					</section>
-					<section class="main-header__menu main-navigation">
-						<nav class="main-navigation__nav">
-							<ul class="main-navigation__list">
-								<ul class="main-navigation__item"><a href="#" class="main-navigation__link">about us</a>
-								</ul>
-								<ul class="main-navigation__item"><a href="#" class="main-navigation__link">services</a>
-								</ul>
-								<ul class="main-navigation__item"><a href="#" class="main-navigation__link">team</a>
-								</ul>
-								<ul class="main-navigation__item"><a href="#"
-										class="main-navigation__link">publications</a></ul>
-								<ul class="main-navigation__item"><a href="#" class="main-navigation__link">contacth</a>
-								</ul>
-							</ul>
-						</nav>
-					</section>
+					</div>
 				</div>
 			</div>
-		</header>
+			<section class="preferences">
+				<div class="preferences__container container">
+					<ul class="preferences__list">
+						<li class="preferences__li"><a href="#"
+								class="preferences__link preferences__link--gradient">Consistent</a></li>
+						<li class="preferences__li"><a href="#"
+								class="preferences__link">Customer oriented</a></li>
+						<li class="preferences__li"><a href="#" class="preferences__link">Innovative</a></li>
+						<li class="preferences__li"><a href="#" class="preferences__link">Business oriented</a></li>
+					</ul>
+					<div class="preferences__description">
+						<h2 class="preferences__title">We turn the idea of legal services</h2>
+						<p class="preferences__text">Consolidating many years of experience and practice, the company's
+							lawyers accompany complex projects and achieve a number of important decisions for the
+							industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+					</div>
+				</div>
+			</section>
+			<section class="advantages">
+				<div class="advantages__container container">
+					<a href="#" class="advantages__link">services</a>
+					<h2 class="advantages__title">What can we do better than others?</h2>
+					<div class="advantages__block">
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">IT and e-commerce</h3>
+							<p class="advantage__text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>						
+						</div>
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Comprehensive daily
+								legal support</h3>
+							<p class="advantage__text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+						</div>
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/coprorate-relationships.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Structuring corporate relationships</h3>
+							<p class="advantage__text">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
+						</div>
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/building-relations.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Building contractual relations</h3>
+							<p class="advantage__text">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
+						</div>
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/protection.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Protection of business, intellectual property</h3>
+							<p class="advantage__text">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
+						</div>
+						<div class="advantage">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Judicial representation</h3>
+							<p class="advantage__text">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
+						</div>	
+					</div>
+				</div>
+			</section>
+		</div>
 	</div>
-
+	<section class="carousel">
+		<div class="carousel__container container">
+			
+		</div>
+	</section>
 </body>
 
 </html>
