--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		</section>
 		<section class="advantages">
 			<div class="advantages__container container">
-				<a href="#" class="advantages__link">services</a>
+				<a href="#" class="advantages__link link">services</a>
 				<h2 class="advantages__title">What can we do better than others?</h2>
 				<div class="advantages__block">
 					<div class="advantage">
@@ -168,7 +168,7 @@
 									class="slide__image">
 							</div>
 							<div class="slide__description">
-								<a href="#" class="slide__link">команда</a>
+								<a href="#" class="slide__link link">команда</a>
 								<blockquote class="slide__quote">Ми звикли брати на себе відповідальність та завжди
 									гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
 								</blockquote>
@@ -184,7 +184,7 @@
 									class="slide__image">
 							</div>
 							<div class="slide__description">
-								<a href="#" class="slide__link">команда</a>
+								<a href="#" class="slide__link link">команда</a>
 								<blockquote class="slide__quote">Ми звикли брати на себе відповідальність та завжди
 									гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
 								</blockquote>
@@ -200,7 +200,7 @@
 									class="slide__image">
 							</div>
 							<div class="slide__description">
-								<a href="#" class="slide__link">команда</a>
+								<a href="#" class="slide__link link">команда</a>
 								<blockquote class="slide__quote">Ми звикли брати на себе відповідальність та завжди
 									гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
 								</blockquote>
@@ -214,6 +214,83 @@
 			</div>
 		</div>
 	</section>
+	<section class="companies">
+		<div class="companies__container">
+			<p class="companies__title">They already trust us</p>
+			<div class="companies__block">
+				<div class="companies__item companies__item--dark-blue"><img src="img/png/hillel-logo.png" alt="hillel-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-green"><img src="img/png/wanna-biz-logo.png" alt="wanna-biz-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-orange"><img src="img/png/tapgerine-logo.png" alt="tapgerine-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--violet"><img src="img/png/3d-look-logo.png" alt="3d-look-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--orange"><img src="img/png/orangear-logo.png" alt="orangear-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-grey"><img src="img/png/adtelligent-logo.png" alt="adtelligent-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-red"><img src="img/png/clicky-logo.png" alt="clicky-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-blue"><img src="img/png/ecoleasing-logo.png" alt="ecoleasing-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--grey"><img src="img/png/infratek-logo.png" alt="infratek-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-violet"><img src="img/png/city-park-logo.png" alt="city-park-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dirty"><img src="img/png/art-print-logo.png" alt="art-print-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--black"><img src="img/png/ulitimate-card-logo.png" alt="ulitimate-card-logo" class="companies__img"></div>
+			</div>
+		</div>
+	</section>
+	<section class="publications">
+		<div class="publications__container container">
+			<a href="#" class="publications__link link">Publications</a>
+			<h2 class="publications__title">We have something to tell</h2>
+			<div class="publications__block">
+				<article class="publications__item publication">
+					<div class="publication__img-wrap">
+						<img src="img/png/planning.png" alt="equity" class="publication__img">
+					</div>
+					<div class="publication__description">
+						<h4 class="publication__title">Equity associate</h4>
+						<span class="publication__date">April 22</span>
+						<p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
+					</div>
+				</article>
+				<article class="publications__item publication">
+					<div class="publication__img-wrap">
+						<img src="img/png/gdpr.png" alt="penalty" class="publication__img">
+					</div>
+					<div class="publication__description">
+						<h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h4>
+						<span class="publication__date">September 29</span>
+						<p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+					</div>
+				</article>				
+				<article class="publications__item publication">
+					<div class="publication__img-wrap">
+						<img src="img/png/people.png" alt="testament" class="publication__img">
+					</div>
+					<div class="publication__description">
+						<h4 class="publication__title">Millennial Testament</h4>
+						<span class="publication__date">August 19</span>
+						<p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+					</div>
+				</article>
+			</div>
+		</div>
+	</section>
+	<footer class="main-footer">
+		<div class="main-footer__container container">
+			<div class="main-footer__contacts contacts">
+				<div class="contacts__address-and-map">
+					<span class="contacts__address">Kyiv, Mechnikova str, 14/1</span>
+					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
+				</div>
+				<div class="contacts__phone-and-net">
+					<svg class="contacts__facebook">
+						<use xlink:href="img/svg/sprite.svg#facebook"></use>	
+					</svg>
+					<span class="contacts__phone">0800 211 927</span>
+					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+				</div>
+			</div>
+			<div class="main-footer__copyrights">
+				<p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
+			</div>
+		</div>
+	</footer>
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script src="js/script-swiper.js"></script>
 </body>
