--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" href="../css/style.min.css"/>
+    <link rel="stylesheet" href="../css/style.min.css" />
 </head>
+
 <body>
     <header class="main-header main-header--white">
         <div class="container main-header__container">
@@ -16,6 +18,10 @@
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
                 </a>
+                <svg class="main-header__logo-svg-slash">
+                    <use xlink:href="../img/svg/sprite.svg#slash"></use>
+                </svg>
+                <span class="main-header__logo-route">about us</span>
             </section>
             <div class="main-header__contacts-and-menu">
                 <section class="main-header__contacts contacts">
@@ -42,7 +48,7 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">about us</a>
+                                <a href="#" class="main-navigation__link main-navigation__link--active">about us</a>
                             </li>
                             <li class="main-navigation__item">
                                 <a href="#" class="main-navigation__link">services</a>
@@ -67,10 +73,15 @@
             <div class="container legal-services__container">
                 <div class="legal-services__description">
                     <h2 class="legal-services__title">We turn over the idea of legal services</h2>
-                    <p class="legal-services__text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve the adoption of a number of decisions that are important for the industry. Many people form the practice of applying the law of the sea in Ukraine.
+                    <p class="legal-services__text">Consolidating many years of experience and practice, the company's
+                        lawyers accompany complex projects and achieve the adoption of a number of decisions that are
+                        important for the industry. Many people form the practice of applying the law of the sea in
+                        Ukraine.
                     </p>
                     <p class="legal-services__text">
-                    HLEGAL is a reliable business partner, confirmed by stable cooperation with international law firms, the trust of large Ukrainian and international companies, and the recognition of professional ratings.
+                        HLEGAL is a reliable business partner, confirmed by stable cooperation with international law
+                        firms, the trust of large Ukrainian and international companies, and the recognition of
+                        professional ratings.
                     </p>
                 </div>
                 <div class="legal-services__statistics">
@@ -90,7 +101,8 @@
                             </svg>
                             <span class="legal-services__item-number">30+</span>
                         </div>
-                        <p class="legal-services__item-text">active clients who entrust us with their orders on a monthly basis</p>
+                        <p class="legal-services__item-text">active clients who entrust us with their orders on a
+                            monthly basis</p>
                     </div>
                     <div class="legal-services__item">
                         <div class="legal-services__item-title">
@@ -110,13 +122,86 @@
         <section class="quality">
             <div class="container quality__container">
                 <div class="quality__description">
-                    <p class="quality__text">The historically unchanged legal profession has begun to reformat in recent years. Clients are feeling this, but law firms are still resisting evolution. Clients need convenience, simplicity, transparent payment. Google, IBM WatsOn, Symantec Clearwell prove that the technological revolution in legal services has begun and is imminent.</p>
+                    <p class="quality__text">The historically unchanged legal profession has begun to reformat in recent
+                        years. Clients are feeling this, but law firms are still resisting evolution. Clients need
+                        convenience, simplicity, transparent payment. Google, IBM WatsOn, Symantec Clearwell prove that
+                        the technological revolution in legal services has begun and is imminent.</p>
                     <p class="quality__text">Quality is what we care about the most.</p>
-                    <p class="quality__text">It's simple. If you are unhappy with our work, we will refund your money. We trust our clients. And we want our clients to trust us too.</p>
+                    <p class="quality__text">It's simple. If you are unhappy with our work, we will refund your money.
+                        We trust our clients. And we want our clients to trust us too.</p>
                 </div>
                 <h2 class="quality__title">Quality is what we care about the most.</h2>
             </div>
         </section>
+        <section class="achievements">
+            <div class="achievements__container container">
+                <h4 class="achievements__title">achievements</h4>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="achievements__slide">
+                                <div class="achievements__item"><img src="../img/png/legal-500.png" alt="legal-500"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/legal-awards.png" alt="Lega Awards"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/rate.png" alt="Rating 2017"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/law-firms.png" alt="Law Firms"
+                                        class="achievement__img"></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="achievements__slide">
+                                <div class="achievements__item"><img src="../img/png/legal-500.png" alt="legal-500"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/legal-awards.png" alt="Lega Awards"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/rate.png" alt="Rating 2017"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/law-firms.png" alt="Law Firms"
+                                        class="achievement__img"></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="achievements__slide">
+                                <div class="achievements__item"><img src="../img/png/legal-500.png" alt="legal-500"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/legal-awards.png" alt="Lega Awards"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/rate.png" alt="Rating 2017"
+                                        class="achievement__img"></div>
+                                <div class="achievements__item"><img src="../img/png/law-firms.png" alt="Law Firms"
+                                        class="achievement__img"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="main-footer">
+		<div class="main-footer__container container">
+			<div class="main-footer__contacts contacts">
+				<div class="contacts__address-and-map">
+					<span class="contacts__address">Kyiv, Mechnikova str, 14/1</span>
+					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
+				</div>
+				<div class="contacts__phone-and-net">
+					<svg class="contacts__facebook">
+						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+					</svg>
+					<span class="contacts__phone">0800 211 927</span>
+					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+				</div>
+			</div>
+			<div class="main-footer__copyrights">
+				<p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
+			</div>
+		</div>
+	</footer>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="../js/script-swiper.js"></script>
 </body>
+
 </html>
