--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="publications">
+	<section class="publications publications--main">
 		<div class="publications__container container">
 			<a href="#" class="publications__link link">Publications</a>
 			<h2 class="publications__title">We have something to tell</h2>
