--- a/pages/publications-inner.html
+++ b/pages/publications-inner.html
@@ -126,19 +126,83 @@
                         France, CNIL considered it.</p>
                 </div>
                 <div class="article__socials">
-                    <div class="article__social-icon">
-
-                    </div>
-                    <div class="article__social-icon">
-
-                    </div>
-                    <div class="article__social-icon">
-
-                    </div>
+                    <a class="article__social-link">
+                        <svg class="article__social-svg">
+                            <use xlink:href="../img/svg/sprite.svg#facebook-cubic"></use>
+                        </svg>
+                    </a>
+                    <a class="article__social-link">
+                        <svg class="article__social-svg">
+                            <use xlink:href="../img/svg/sprite.svg#twitter"></use>
+                        </svg>
+                    </a>
+                    <a class="article__social-link">
+                        <svg class="article__social-svg">
+                            <use xlink:href="../img/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </article>
+        <section class="publications publications--main">
+            <div class="publications__container container">
+                <a href="#" class="publications__link link">Publications</a>
+                <h2 class="publications__title">Recommended</h2>
+                <div class="publications__block">
+                    <article class="publications__item publication">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/planning.png" alt="equity" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h4 class="publication__title">Equity associate</h4>
+                            <span class="publication__date">April 22</span>
+                            <p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
+                        </div>
+                    </article>
+                    <article class="publications__item publication">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/gdpr.png" alt="penalty" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h4>
+                            <span class="publication__date">September 29</span>
+                            <p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+                        </div>
+                    </article>				
+                    <article class="publications__item publication">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/people.png" alt="testament" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h4 class="publication__title">Millennial Testament</h4>
+                            <span class="publication__date">August 19</span>
+                            <p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="main-footer">
+		<div class="main-footer__container container">
+			<div class="main-footer__contacts contacts">
+				<div class="contacts__address-and-map">
+					<span class="contacts__address">Kyiv, Mechnikova str, 14/1</span>
+					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
+				</div>
+				<div class="contacts__phone-and-net">
+					<svg class="contacts__facebook">
+						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+					</svg>
+					<span class="contacts__phone">0800 211 927</span>
+					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+				</div>
+			</div>
+			<div class="main-footer__copyrights">
+				<p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
